# sysdupd

./: .SRCINFO  PKGBUILD  README.md  meson.build  setup.py
data/: com.virex.Sysdupd.appdata.xml  com.virex.Sysdupd.desktop  com.virex.Sysdupd.gschema.xml  com.virex.Sysdupd.policy  resources.gresource.xml  sysdupd.in
sysdupd/: __main__.py  distro_utils.py
